--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h1, h2	{
 <hr>
 <h2> Software </h2>
 <p>
-<a style= "color:white"  href="https://drive.google.com/drive/folders/1-8PdtXgeY8h3XYReuWQd_nKrwgTXx79J?usp=sharing" target="_blank">Click here</a>
+<a style= "color:white"  href="https://github.com/SeamusSmithSoftware/Projects" target="_blank">Click here</a>
 to view some of my projects</p>
 <hr>
 </main>
