--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ h1, h2	{
 <p>
 <a style= "color:white"  href="https://github.com/SeamusSmithSoftware/Projects" target="_blank">Click here</a>
 to view some of my projects</p>
+<p> To download the application you are looking for open the .zip folder you want and select download
+<img src="https://github.com/SeamusSmithSoftware/SeamusSmithSoftware.github.io/blob/master/instruction.jpg?raw=true" width="128" height="72"> </p>
 <hr>
 </main>
 
