--- a/software.html
+++ b/software.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
 <head>
 
+
 <!-- CSS -->
 <style>
 /* Style The Dropdown Button */
@@ -91,22 +92,8 @@ h1, h2	{
   </div>
 </div>
 </header>
-
-<body style= "color:white" >
-
-<main>
-<h1>Seamus Smith Software</h1>
-<hr>
-<h2> About </h2>
-<p>Welcome to my website, I hope you find what you're looking for. I am currently in the process of teaching myself HTML, but I have also studied Python and C#. </p>
-<hr>
+<body style= "color:white">
 <h2> Software </h2>
-<p>
-<a style= "color:white"  href="https://github.com/SeamusSmithSoftware/Projects" target="_blank">Click here</a>
-to view some of my projects</p>
-<a style= "color:white"  href="https://raw.githubusercontent.com/SeamusSmithSoftware/SeamusSmithSoftware.github.io/master/instruction.jpg" target="_blank">To download the application you are looking for open the .zip folder you want and select download</a>
-<hr>
-</main>
-
+<a style= "color:white"  href="https://github.com/SeamusSmithSoftware/Projects/raw/master/Samuel%20L%20Jackson%20Quote%20generator.zip" target="_blank">Samuel L Jackson Quote Generator</a>
 </body>
 </html>
