--- a/software.html
+++ b/software.html
@@ -87,7 +87,7 @@ h1, h2	{
 <div class="dropdown"  style="float:left;">
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content">
-    <a href="https://seamussmithsoftware.github.io/index.html">ABOUT</a>
+    <a href="https://seamussmithsoftware.github.io">ABOUT</a>
     <a href="https://seamussmithsoftware.github.io/software.html">SOFTWARE</a>
   </div>
 </div>
