--- a/index.html
+++ b/index.html
@@ -72,7 +72,17 @@ main	{
 p, a	{
 	font-family:courier;
 }
-h1, h2	{
+h1	{
+	font-family:verdana;
+	text-align:center;
+	margin-top: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+}
+h2	{
 	font-family:verdana;
 	text-align:center;
 }
