--- a/software.html
+++ b/software.html
@@ -73,7 +73,17 @@ main	{
 p, a	{
 	font-family:courier;
 }
-h1, h2	{
+h1	{
+	font-family:verdana;
+	text-align:center;
+	margin-top: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+}
+h2	{
 	font-family:verdana;
 	text-align:center;
 }
@@ -91,6 +101,7 @@ h1, h2	{
     <a href="https://seamussmithsoftware.github.io/software.html">SOFTWARE</a>
   </div>
 </div>
+<h1>Seamus Smith Software</h1>
 </header>
 <body style= "color:white">
 <h2> Software </h2>
