--- a/software.html
+++ b/software.html
@@ -106,6 +106,7 @@ h2	{
 <body style= "color:white">
 <hr>
 <h2> Software </h2>
+<h3> Windows: </h3>
 <a style= "color:white"  href="https://github.com/SeamusSmithSoftware/Projects/raw/master/Samuel%20L%20Jackson%20Quote%20generator.zip" target="_blank">Samuel L Jackson Quote Generator</a>
 <hr>
 </body>
