--- a/software.html
+++ b/software.html
@@ -13,6 +13,7 @@
   font-size: 16px;
   border: none;
   cursor: pointer;
+  height: 50px;
 }
 
 /* The container <div> - needed to position the dropdown content */
