--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
+<script data-ad-client="ca-pub-7317115222834594" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- CSS -->
 <style>
 /* Style The Dropdown Button */
