--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ h2	{
 <!-- CSS End -->
 
 <title>Seamus Smith Software</title>
+<meta name="google-site-verification" content="Jp8_SBSGUF5OfaafHdIn0wfP65KXgsrJJmZ0-uRrDo0" />
 </head>
 
 <header>
