--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h2	{
 <main>
 <hr>
 <h2> About </h2>
-<p>Welcome to my website, I hope you find what you're looking for. I am currently in the process of teaching myself HTML, but I have also studied Python and C#. </p>
+<p>Hi. My name is Seamus. I am an aspiraing software engineer with a basic understanding of various programming languages such as Python, C#, HTML and CSS. I learnt Python whilst doing GCSE Computer Science, and when i went on to do A-Level Computer Science I ended up learning C#. I have taught myself HTML and CSS, and I am currently doing a web development course through Shaw Academy where I can build on my knowledge. I am also planning on learning C++ soon as well.   </p>
 <hr>
 </main>
 
