--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
+	<div class='jumbotron'>
 	<!--HEADER-->
 	<header>
 		<div class='continer-fluid'>
-			<div class='jumbotron text-center'>
+			<div class='text-center'>
 				<h1>About</h1>
 				<p>Hi. My name is Seamus. I am an aspiraing software engineer with a basic
 				understanding of various programming languages such as Python, C#, HTML
@@ -54,7 +55,6 @@
 		<nav class='nomargin navbar navbar-inverse navbar-fixed-bottom'>
 			<div class='container-fluid'>
 				<ul class='nav navbar-nav'>
-					<li class='navbar-text'>Copyright &copy; SeamusSmithSoftware</li>
 					<li><a href='https://www.instagram.com/seamussmithsoftware/'><i class="fa fa-instagram"></i></a></li>
 				</ul>
 				<ul class='nav navbar-nav navbar-right'>
@@ -69,5 +69,6 @@
 	<!--Bootstrap JS-->
 	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa' crossorigin='anonymous'></script>	
 	<!--Custom JS-->
+	</div>
 </body>
 </html>
