--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
 <body>
 	<!--HEADER-->
 	<header>
-		<div class='continer-fluid'>
+		<div class='jumbotron continer-fluid'>
 			<div class='text-center'>
 				<h1>About</h1>
-				<p>Hi. My name is Seamus. I am an aspiraing software engineer with a basic
-				understanding of various programming languages such as Python, C#, HTML
-				and CSS. I learnt Python whilst doing GCSE Computer Science, and when i
-				went on to do A-Level Computer Science I ended up learning C#. I have
-				taught myself HTML and CSS, and I am currently doing a web development
-				course through Shaw Academy where I can build on my knowledge. I am also
-				planning on learning C++ soon as well.</p>
+				<p>Hi. My name is Seamus. I use this site to showcase some of the projects I have managed to complete and feel may be of practical use or entertainment</p>
 			</div>
 		</div>
 	</header>
@@ -48,6 +42,13 @@
 	</nav>
 	<!--MAIN-->
 	<main>
+		<p>I am an aspiraing software engineer with a basic
+		understanding of various programming languages such as Python, C#, HTML
+		and CSS. I learnt Python whilst doing GCSE Computer Science, and when i
+		went on to do A-Level Computer Science I ended up learning C#. I have
+		taught myself HTML and CSS, and I am currently doing a web development
+		course through Shaw Academy where I can build on my knowledge. I am also
+		planning on learning C++ soon as well.</p>
 	</main>
 	<!--FOOTER-->
 	<footer class='text-center'>
