--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<span class='icon-bar'></span>
 					<span class='icon-bar'></span>
 				</button>
-				<a class='navbar-brand' href='index.html'>SeamusSmithSoftware</a>
+				<a class='navbar-brand' href='index.html'>Seamus Smith Software</a>
 			</header>
 			<div clas='collapse navbar-collapse' id='myNavbar'>
 				<ul class='nav navbar-nav'>
@@ -42,13 +42,13 @@
 	</nav>
 	<!--MAIN-->
 	<main>
-		<p>I am an aspiraing software engineer with a basic
+		<p>I am an aspiraing software engineer with a firm
 		understanding of various programming languages such as Python, C#, HTML
-		and CSS. I learnt Python whilst doing GCSE Computer Science, and when i
+		and CSS. I learnt Python whilst doing GCSE Computer Science, and when I
 		went on to do A-Level Computer Science I ended up learning C#. I have
 		taught myself HTML and CSS, and I am currently doing a web development
 		course through Shaw Academy where I can build on my knowledge. I am also
-		planning on learning C++ soon as well.</p>
+		learning C++ through The Great Courses.</p>
 	</main>
 	<!--FOOTER-->
 	<footer class='text-center'>
@@ -58,7 +58,7 @@
 					<li><a href='https://www.instagram.com/seamussmithsoftware/'><i class="fa fa-instagram"></i></a></li>
 				</ul>
 				<ul class='nav navbar-nav navbar-right'>
-					<li class='navbar-text'>Copyright &copy; SeamusSmithSoftware</li>
+					<li class='navbar-text'>Copyright &copy; Seamus Smith Software</li>
 				</ul>
 			</div>
 		</nav>
