--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@ h2	{
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content">
     <a href="https://seamussmithsoftware.github.io">ABOUT</a>
-    <a href="https://seamussmithsoftware.github.io/software.html">SOFTWARE</a>
+    <a href="https://seamussmithsoftware.github.io/projects.html">SOFTWARE</a>
   </div>
 </div>
 <h1>Seamus Smith Software</h1>
