--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</header>
 			<div clas='collapse navbar-collapse' id='myNavbar'>
 				<ul class='nav navbar-nav'>
-					<li><a href='software.html'>Software</a></li>
+					<li><a href='projects.html'>Projects</a></li>
 				</ul>
 			</div>
 		</div>
