--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<div class='jumbotron continer-fluid'>
 			<div class='text-center'>
 				<h1>About</h1>
-				<p>Hi. My name is Seamus. I use this site to showcase some of the projects I have managed to complete and feel may be of practical use or entertainment</p>
+				<p>Hi. My name is Seamus. I use this site to showcase some of the
+				projects I have managed to complete and feel may be of practical
+				use or entertainment to you.</p>
 			</div>
 		</div>
 	</header>
