--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 	</nav>
 	<!--MAIN-->
-	<main>
+	<main class='text-center'>
 		<p>I am an aspiraing software engineer with a firm
 		understanding of various programming languages such as Python, C#, HTML
 		and CSS. I learnt Python whilst doing GCSE Computer Science, and when I
