--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,8 @@
 		</div>
 	</nav>
 	<!--MAIN-->
-	<main>
-		<a href='https://github.com/SeamusSmithSoftware/Projects/raw/master/Samuel%20L%20Jackson%20Quote%20generator.zip' target='_blank'>Samuel L Jackson Quote Generator>
+	<main class="jumbotron">
+		<a href='https://github.com/SeamusSmithSoftware/Projects/raw/master/Samuel%20L%20Jackson%20Quote%20generator.zip' target='_blank'>Samuel L Jackson Quote Generator</a>
 	</main>
 	<!--FOOTER-->
 	<footer class='text-center'>
