--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
 		</div>
 	</nav>
 	<!--MAIN-->
-	<main class="jumbotron">
+	<main>
 		<a href='https://github.com/SeamusSmithSoftware/Projects/raw/master/Samuel%20L%20Jackson%20Quote%20generator.zip' target='_blank'>Samuel L Jackson Quote Generator</a>
 	</main>
 	<!--FOOTER-->
