--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 	<nav class='navbar navbar-inverse navbar-fixed-top'>
 		<div class='container-fluid'>
 			<header class='navbar-header'>
-				<button type='button' class='navbar-toggle' data-toggle='dropdown' data-target='#myNavbar'>
+				<button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
 					<span class='icon-bar'></span>
 					<span class='icon-bar'></span>
 					<span class='icon-bar'></span>
 				</button>
 				<a class='navbar-brand' href='index.html'>Seamus Smith Software</a>
 			</header>
-			<div clas='collapse navbar-collapse' id='myNavbar'>
+			<div class='collapse navbar-collapse' id='myNavbar'>
 				<ul class='nav navbar-nav'>
 					<li><a href='projects.html'>Projects</a></li>
 				</ul>
