--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 				</button>
 				<a class='navbar-brand' href='index.html'>Seamus Smith Software</a>
 			</header>
-			<div clas='collapse navbar-collapse' id='myNavbar'>
+			<div class='collapse navbar-collapse' id='myNavbar'>
 				<ul class='nav navbar-nav'>
 					<li><a href='projects.html'>Projects</a></li>
 				</ul>
